# novo_dpo

./: .gitignore  README.md  datasets_processings.ipynb  dpo_test.py  plotting.py  pyproject.toml
src/: load_data.py
src/pyutils/: OXDA_activity_dpo_test_16.json  OXDA_activity_dpo_train_16.json  OXDA_activity_dpo_val_16.json  amp.json  amp_dpo.json  amp_dpo_fixed.json  amp_test.json  amp_train.json  data_utils.py  grpo_trainer_training.py  ml_tools.py  protgpt2_trainer_test.py  training_loop.py
