[project]
name = "novo-dpo"
version = "0.1.0"
description = "novodpo"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "trl (==0.16.1)",
    "biopython (>=1.85,<2.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

